fix scrollbar width

--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ body {
     width: 12px;
 }
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
+    box-shadow: inset 0 0 5px rgb(0, 0, 0);
 }
 ::-webkit-scrollbar-thumb {
     background: rgb(192, 0, 198);
